Removed ability to add VAS from properties. Also, fixed the pre word wrap issue

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -91,7 +91,7 @@
 		color: green;
 		width: 60%;
 		float: left;
-		white-space: pre;
+		white-space: pre-wrap;
 	}
 }
 
@@ -206,7 +206,7 @@
 }
 
 .comment {
-	white-space: pre;
+	white-space: pre-wrap;
 }
 
 .list_line_odd {
